--- a/CoupleMoney/pom.xml
+++ b/CoupleMoney/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java-version>1.7</java-version>
+		<java-version>1.8</java-version>
 		<org.springframework-version>4.1.2.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.7.4</org.aspectj-version>
 		<org.slf4j-version>1.7.5</org.slf4j-version>
@@ -218,6 +218,11 @@
 		</dependency>
 		
 		<!-- commons -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>commons-dbcp</groupId> -->
 <!-- 			<artifactId>commons-dbcp</artifactId> -->
@@ -228,11 +233,11 @@
 <!-- 			<artifactId>commons-collections</artifactId> -->
 <!-- 			<version>3.2.1</version> -->
 <!-- 		</dependency> -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>commons-beanutils</groupId> -->
+<!-- 			<artifactId>commons-beanutils</artifactId> -->
+<!-- 			<version>1.7.0</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -240,11 +245,17 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>commons-beanutils</groupId> -->
-<!-- 			<artifactId>commons-beanutils</artifactId> -->
-<!-- 			<version>1.7.0</version> -->
-<!-- 		</dependency> -->
+		<!-- thymeleaf layout -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.0.0.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>3.0.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
